# GhidraX

./: .gitignore  AUDIT.md  audit_raw.txt  deploy.bat
cpp/: CMakeLists.txt  build.bat  decompiler_bind.cpp
ida_plugin/: README.md  ghidra_decompiler.py
python/: progress.md  pyproject.toml
python/ghidra/: __init__.py
python/ghidra/analysis/: __init__.py  constseq.py  double.py  dynamic.py  flow.py  funcdata.py  graph.py  heritage.py  jumptable.py  merge.py  prefersplit.py  rangeutil.py  subflow.py
python/ghidra/arch/: __init__.py  architecture.py  inject.py  loadimage.py  options.py  override.py  userop.py
python/ghidra/block/: __init__.py  block.py  blockaction.py  collapse.py
python/ghidra/core/: __init__.py  address.py  error.py  expression.py  float_format.py  globalcontext.py  int128.py  marshal.py  opbehavior.py  opcodes.py  pcoderaw.py  space.py  translate.py  types.py
python/ghidra/database/: __init__.py  comment.py  cpool.py  database.py  stringmanage.py  varmap.py
python/ghidra/emulate/: __init__.py  emulate.py  memstate.py
python/ghidra/fspec/: __init__.py  fspec.py  paramactive.py
python/ghidra/ir/: __init__.py  cover.py  op.py  typeop.py  variable.py  varnode.py
python/ghidra/output/: __init__.py  prettyprint.py  printc.py  printlanguage.py
python/ghidra/sleigh/: __init__.py  arch_map.py  decompiler_native.cp314-win_amd64.pyd  lifter.py  slaformat.py  sleigh.py  sleighbase.py
python/ghidra/transform/: __init__.py  action.py  condexe.py  coreaction.py  coreaction2.py  deadcode.py  nzmask.py  ruleaction.py  ruleaction_batch1a.py  ruleaction_batch1b.py  ruleaction_batch1c.py  ruleaction_batch1d.py  ruleaction_batch1e.py  ruleaction_batch1f.py  ruleaction_batch1g.py  ruleaction_batch1h.py  ruleaction_batch1i.py  ruleaction_batch2a.py  ruleaction_batch2b.py  ruleaction_batch2c.py  universal.py
python/ghidra/types/: __init__.py  cast.py  datatype.py  resolve.py
tests/: test_basic_classes.py
