[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyghidra-decompiler"
version = "0.1.0"
description = "Pure Python reimplementation of the Ghidra decompiler engine"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "sortedcontainers>=2.4.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ghidra*"]
